refactor: replace simple impl with EJB
- remove unused ApplicationStartupListener
- speed up Gradle via gradle.properties
- apply SonarLint safety/maintainability fixes